layout fixes, mobile grid alignment

--- a/css/artistpage.css
+++ b/css/artistpage.css
@@ -46,6 +46,7 @@
     width: 500px;
     object-fit: cover;
     margin-right: 2rem;
+    border-radius: 5px;
   }
 
   h1 {
